--- a/package.json
+++ b/package.json
@@ -12,13 +12,24 @@
     "devDependencies": {
         "@tailwindcss/ui": "^0.6.0",
         "alpinejs": "^2.7.3",
+        "autoprefixer": "^10.3.7",
         "axios": "^0.19",
+        "bootstrap": "^4.6.0",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "jquery": "^3.6",
+        "laravel-echo": "^1.11.2",
+        "laravel-mix": "^6.0.0-beta.17",
         "lodash": "^4.17.19",
+        "popper.js": "^1.16.1",
+        "postcss": "^8.3.11",
         "postcss-import": "^12.0.1",
-        "resolve-url-loader": "^3.1.0",
-        "tailwindcss": "^1.8.0",
-        "vue-template-compiler": "^2.6.12"
+        "pusher-js": "^7.0.3",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.43.2",
+        "sass-loader": "^11.1.1",
+        "tailwindcss": "^2.2.17",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.14"
     }
 }
